--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,4 +14,10 @@
       "path": "./tsconfig.spec.json"
     }
   ]
+},
+{
+    "compilerOptions": {
+        "experimentalDecorators": true,
+        "allowJs": true
+    }
 }
