--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "@ngu/carousel": "^2.0.3",
     "@popperjs/core": "^2.0.6",
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "ng-icon-sidebar": "^2.1.1",
     "ng-pick-datetime": "^7.0.0",
     "ngx-daterangepicker-material": "^2.2.0",
+    "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^3.0.1",
     "ngx-toastr": "^12.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
