--- a/angular.json
+++ b/angular.json
@@ -25,11 +25,16 @@
 						"aot": true,
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+							{
+								"input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+							},
 							"src/styles/styles.scss",
-							"node_modules/animate.css/animate.min.css",
-							"node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-							"node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+							{
+								"input": "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css"
+							},
+							{
+								"input": "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+							}
 						],
 						"scripts": [
 							"./node_modules/jquery/dist/jquery.min.js",
