--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
 								"input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
 							},
 							"src/styles/styles.scss",
+							"node_modules/ngx-toastr/toastr.css",
 							{
 								"input": "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css"
 							},
