--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/architect": "^0.1000.6",
     "@angular/animations": "^10.0.3",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~10.0.3",
@@ -31,7 +32,9 @@
     "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "ng-icon-sidebar": "^2.1.1",
+    "ng-otp-input": "^1.7.1",
     "ng-pick-datetime": "^7.0.0",
+    "ngx-countdown": "^10.0.0",
     "ngx-daterangepicker-material": "^2.2.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^3.0.1",
