--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "moment": "^2.24.0",
+    "ng-block-ui": "^3.0.2",
     "ng-icon-sidebar": "^2.1.1",
     "ng-otp-input": "^1.7.1",
     "ng-pick-datetime": "^7.0.0",
