--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"editor.detectIndentation": false,
 	"editor.formatOnSave": true,
-	"editor.insertSpaces": false,
 	"html.format.endWithNewline": true,
 	"html.format.wrapAttributes": "force",
 	"json.format.enable": false,
@@ -15,6 +13,12 @@
 		"editor.codeActionsOnSave": {
 			"source.organizeImports": true,
 			"source.fixAll": true
-		}
-	}
+		},
+		"editor.tabSize": 4
+  },
+	"editor.tabCompletion": "on",
+	"prettier.tabWidth": 4,
+	"vetur.format.options.useTabs": true,
+	"vetur.format.options.tabSize": 4,
+	"prettier.useTabs": true
 }
