--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "highcharts": "^8.2.0",
     "jquery": "^3.5.1",
     "moment": "^2.24.0",
@@ -36,6 +37,7 @@
     "ng-icon-sidebar": "^2.1.1",
     "ng-otp-input": "^1.7.1",
     "ng-pick-datetime": "^7.0.0",
+    "ng-zorro-antd": "^10.0.2",
     "ngx-countdown": "^10.0.0",
     "ngx-daterangepicker-material": "^2.2.0",
     "ngx-owl-carousel": "^2.0.7",
