--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng-zorro-antd": "^10.0.2",
     "ngx-countdown": "^10.0.0",
     "ngx-daterangepicker-material": "^2.2.0",
+    "ngx-infinite-scroll": "^9.1.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^3.0.1",
     "ngx-toastr": "^12.0.0",
