--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngu/carousel": "^2.0.3",
     "@popperjs/core": "^2.0.6",
     "@syncfusion/ej2-angular-calendars": "^18.1.43",
+    "@types/date-fns": "^2.6.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
