update [Dashboard] Data Chart improvement &  invoice

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 		"core-js": "^3.6.5",
 		"date-fns": "^2.16.1",
 		"highcharts": "^8.2.0",
+		"html2canvas": "^1.0.0-rc.7",
 		"jquery": "^3.5.1",
+		"jspdf": "^2.1.1",
 		"moment": "^2.24.0",
 		"ng-block-ui": "^3.0.2",
 		"ng-icon-sidebar": "^2.1.1",
