--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
 	"prettier.tabWidth": 4,
 	"vetur.format.options.useTabs": true,
 	"vetur.format.options.tabSize": 4,
-	"prettier.useTabs": true
+	"prettier.useTabs": true,
+	"js/ts.implicitProjectConfig.experimentalDecorators": true
 }
